fix nex state velocity bug